force-app/main/default/objects/Robotic_Car__c/Robotic_Car__c.object-meta.xml
<CustomObject>
    <label>Robotic Car</label>
    <nameField>
        <displayFormat>RCAR-{00000}</displayFormat>
        <label>Robotic Car Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Robotic Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>