force-app/main/default/objects/Robotic_Car__c/fields/Car_Name_Or_Code__c.field-meta.xml
<CustomField>
    <fullName>Car_Name_Or_Code__c</fullName>
    <label>Car Name Or Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>