force-app/main/default/objects/Robotic_Car__c/fields/Robotic_Car_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Robotic_Car_Contact_Number__c</fullName>
    <label>Robotic Car Contact Number</label>
    <type>Phone</type>
</CustomField>